2009-12-09  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tkUnixWm.c (TkpMakeMenuWindow):	Improve the determining of what
	* generic/tkMenu.c (ConfigureMenu):	EWMH hint to use so that we
	distinguish between dropdown menus (children of menubars) and what are
	presumably popup menus.

2009-12-08  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* unix/tkUnixWm.c: [Bug 2864685]: Apply suitable extended window
	manager hints to the menus so that modern unix window managers can use
	the correct animation modes.

2009-12-02  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/configure:	(regenerated)
	* win/Makefile.in:	Use tktest86.dll for all tests.
	* win/tkWinInt.h:	Mark various functions MODULE_SCOPE
	* generic/tkInt.decls:	[Bugs 220600, 220690]: Make TkWinChildProc
				available in private stub table.
	* generic/tkIntPlatDecls.h: (regenerated)
	* generic/tkStubInit.c:	(regenerated)

2009-11-30  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/Makefile.in: Better dependancies in case of static build.
	Generate tktest86.dll and tktest86.lib.

2009-11-29  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkInt.h:      Make all internal initialization
	* generic/tkTest.c:     routines MODULE_SCOPE
	* generic/tkOldTest.c:
	* generic/tkSquare.c:
	* carbon/tkMaxOSXTest.c:
	* macosx/tkMaxOSXTest.c:
	* win/tkWinTest.c:
	* win/tcl.m4:           (copied from Tcl 8.6)
	* win/configure:        (regenerated)

2009-11-25  Stuart Cassoff  <stwo@users.sf.net>

	* unix/tcl.m4:		[Patch 2892871]: Remove unneeded
				AC_STRUCT_TIMEZONE.
	* unix/configure:	Regenerated with autoconf-2.59.

2009-11-24  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tkUnixWm.c (WmIconphotoCmd): [Bug 2902814]: Use the correct
	type for the array of data passed into X. It's wrong, but "right"
	because of a mistake in the X11 specification.

2009-11-23  Andreas Kupries  <andreask@activestate.com>

	* library/safetk.tcl (::safe::loadTk): [Bug 2902573]: Fixed access